--- a/package.json
+++ b/package.json
@@ -9,16 +9,52 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/charts": "^7.6.1",
+    "@mantine/code-highlight": "^7.6.1",
+    "@mantine/core": "^7.6.1",
+    "@mantine/dates": "^7.6.1",
+    "@mantine/dropzone": "^7.6.1",
+    "@mantine/form": "^7.6.1",
+    "@mantine/hooks": "^7.6.1",
+    "@mantine/modals": "^7.6.1",
+    "@mantine/notifications": "^7.6.1",
+    "@mantine/nprogress": "^7.6.1",
+    "@mantine/spotlight": "^7.6.1",
+    "@modelfusion/vercel-ai": "^1.1.0",
+    "@tabler/icons-react": "^2.47.0",
+    "@uiw/react-markdown-preview": "^5.1.1",
+    "ai": "^3.0.5",
+    "cheerio": "1.0.0-rc.12",
+    "dayjs": "^1.11.10",
+    "duck-duck-scrape": "^2.2.5",
+    "keyword-extractor": "^0.0.28",
+    "modelfusion": "^0.137.0",
+    "next": "14.1.1",
+    "node-fetch": "^3.3.2",
+    "node-summary": "^1.2.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.1"
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "recharts": "2",
+    "striptags": "^3.2.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/jsdom": "^21.1.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "eslint": "^8",
-    "eslint-config-next": "14.1.1"
+    "eslint-config-next": "14.1.1",
+    "node-cache": "^5.1.2",
+    "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
+    "typescript": "^5"
+  },
+  "browser": {
+    "child_process": false
   }
 }
